# TheOfficialTierList_Server

./: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  lambda.rs  test.json
core/: Cargo.toml
core/src/: mutation.rs  query.rs
database/: init.sql
entity/: Cargo.toml
entity/src/: lib.rs  lists.rs  tiers.rs
migration/: Cargo.toml
src/: lib.rs  main.rs
src/database/: bloonscolors.rs  bloonstiers.rs  lists.rs  mod.rs  prelude.rs  tiers.rs
src/graphql/: schema.rs
src/graphql/mutation/: lists.rs  mod.rs  tiers.rs
src/graphql/query/: lists.rs  mod.rs  tiers.rs
src/routes/: create_list.rs  create_tier.rs  delete_list.rs  delete_tier.rs  get_lists.rs  get_tiers.rs  hello_world.rs  mod.rs  update_list.rs  update_tier.rs
