[package]
name = "totl_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
dotenvy = "0.15.6"
http = "0.2.9"
sea-orm = { version = "0.11.0", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.154", features = ["serde_derive"] }
tokio = { version = "1.26.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors"] }
uuid = { version = "1.3.0", features = ["serde"] }
validator = { version = "0.16.0", features = ["derive"] }
graphql-example-core = { path = "core" }
async-graphql-axum = "5.0.7"
entity = { path = "entity" }

[workspace]
members = [".", "core", "entity"]

[lib]
name = "totl_backend"
path = "src/lib.rs"

[[bin]]
name = "totl_backend"
path = "src/main.rs"
