[package]
name = "graphql-example-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
# graphql-example-api = { path = "src" }
tower-http = { version = "0.4.0", features = ["cors"]}

[dependencies.sea-orm]
version = "0.11.3" # sea-orm version
features = [
    # "debug-print",
    # "runtime-async-std-native-tls",
    "sqlx-postgres",
    # "sqlx-mysql",
    # "sqlx-sqlite",
]

[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }

